/*
 * $Id: ChangeLog,v 1.744 2011-08-13 19:34:52 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-08-13 16:31:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/h_listbox.prg
  * include/i_listbox.prg
    + Added NOVSCROLL clause to LISTBOX control.

2011-08-12 14:15:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * ./compile_mingw.bat
    ! Fixed compiler warning "oohg.h" not found.

2011-08-08 18:12:00 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
    + added method :setfont()
    ! fixed problems in MM pinting mode.
    * added angle parameter to print lines in angle.

2011-08-08 16:43:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * resources/CompileRes.bat
  * ./compile_mingw.bat
    ! Fixed deleting _oohg_resconfig.h generates QAC warning.
  + resources/_oohg_resconfig.h
    
2011-08-08 14:23 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
    ! Fixed xHarbour compilation.
  * source/h_listbox.prg
    + LISTBOXADDSTRING2() and LISTBOXINSERTSTRING2() added
      for not to alter LISTBOXADDSTRING() and LISTBOXINSERTSTRING()
      parameter's usage.
    ! Fixed LISTBOXINSERTSTRING2() calls for xHarbour.
  * source/h_windows.prg
    ! Fixed warnings.

2011-08-08 14:23 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  + ./ChangeLog.002
  * ./ChangeLog
    ! Renamed to ChangeLog.002 and start a new one.